--- a/src/pages/AddEditUser.css
+++ b/src/pages/AddEditUser.css
@@ -25,3 +25,10 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #45a049;
 }
+
+form {
+  margin: auto;
+  padding: 15px;
+  max-width: 400px;
+  align-content: center;
+}
